--- a/src/app/components/paciente/lista-pacientes.component.css
+++ b/src/app/components/paciente/lista-pacientes.component.css
@@ -23,6 +23,14 @@
     margin-top: 30px;
 }
 
+.modal-content {
+    padding: 20px 40px;
+}
+
+.modal-header {
+    border-bottom: 5px solid #284b63;
+}
+
 .table-dark {
     background-color: #284b63;
 }
