falta arreglar paginacion de las atenciones del paciente, inicia construcción de funcionalidad de pago

--- a/src/app/components/paciente/lista-pacientes.component.css
+++ b/src/app/components/paciente/lista-pacientes.component.css
@@ -31,6 +31,10 @@
     border-bottom: 5px solid #284b63;
 }
 
+.modal-footer {
+    display: block;
+}
+
 .table-dark {
     background-color: #284b63;
 }
