--- a/src/app/components/hora-atencion/agenda/horario/horario.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/horario.component.html
@@ -197,12 +197,16 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <div class="col-lg-12">
-                    <h3>Detalle pago</h3>
+                <div class="col-lg-6">
+                    <h3>Detalle Pago</h3>
+                </div>
+                <div class="col-lg-6 text-right">
+                    <button (click)="updatePayment()" class="btn btn-primary" type="button">Modificar pago</button>
                 </div>
             </div>
             <div class="modal-body">
-                <app-pago [horarioAtencion]="horario"></app-pago>
+                <app-pago *ngIf="!actualizarPago" [horarioAtencion]="horario"></app-pago>
+                <app-pago-form *ngIf="actualizarPago" [horarioAtencion]="horario" ></app-pago-form>
             </div>
             <div class=" modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
