--- a/src/app/components/pago/pago-form/pago-form.component.html
+++ b/src/app/components/pago/pago-form/pago-form.component.html
@@ -67,8 +67,15 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <button (click)="pay()" [disabled]="medioPago.invalid || montoPago.invalid" class="btn btn-primary"
-                    type="button" data-dismiss="modal">Registrar pago</button>
+                <button *ngIf="!horarioAtencion.pago?.idPago; else updateButton" (click)="pay()"
+                    [disabled]="medioPago.invalid || montoPago.invalid" class="btn btn-primary" type="button"
+                    data-dismiss="modal">Registrar pago</button>
+
+                <ng-template #updateButton>
+                    <button (click)="updatePayment()" class="btn btn-primary" type="button"
+                        [disabled]="medioPago.invalid || montoPago.invalid" data-dismiss="modal">Guardar
+                        cambios</button>
+                </ng-template>
             </div>
         </div>
     </form>
