--- a/src/app/components/pago/pago.component.css
+++ b/src/app/components/pago/pago.component.css
@@ -18,6 +18,11 @@
     margin-top: 10px;
 }
 
+button, button:hover, button:disabled, button:focus {
+    background-color: #284b63;
+    border-color: #284b63;
+}
+
 i {
     font-size: 40px;
     color: #284b63;
