--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -19,32 +19,11 @@
     </div>
 
     <!-- Monto pagado -->
-    <div *ngIf="horarioAtencion.pago && horarioAtencion.pago.montoPago" class="row">
+    <div *ngIf="horarioAtencion.pago && horarioAtencion.pago.montoPago != null" class="row">
         <div class="col-lg-12 text-center">
             <i class="bi bi-cash-stack"></i>
             <h5 class="color">Monto pagado</h5>
             <h5 class="overflow">${{horarioAtencion.pago.montoPago}}</h5>
-        </div>
-    </div>
-    
-</div>
-
-<!-- Modal que permite la modificación de un pago -->
-<div class="modal fade" id="modificarPago" tabindex="-1" role="dialog"
-    aria-labelledby="modificarPagoLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <div class="col-lg-12">
-                    <h3>Modificar pago</h3>
-                </div>
-            </div>
-            <div class="modal-body">
-                <app-pago-form [horarioAtencion]="horarioAtencion" ></app-pago-form>
-            </div>
-            <div class=" modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-            </div>
         </div>
     </div>
 </div>
