--- a/src/app/components/pago/pago-form/pago-form.component.css
+++ b/src/app/components/pago/pago-form/pago-form.component.css
@@ -12,6 +12,15 @@
     border-bottom: 5px solid #284b63;
 }
 
+.form-check-input {
+    margin-left: -.75rem;
+    margin-top: .4rem;
+}
+
+.form-check-label {
+    margin-left: 7px;
+}
+
 button, button:disabled, button:focus, button:hover {
     background-color: #284b63;
     border-color: #284b63;
