--- a/src/app/components/pago/pago-form/pago-form.component.html
+++ b/src/app/components/pago/pago-form/pago-form.component.html
@@ -13,11 +13,27 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="form-group">
-                            <label for="medio-pago">Afiliación del paciente</label>
+                            <label for="medio-pago">Afiliación de salud asociada a este pago:</label>
                             <div class="input-group">
                                 <span class="input-group-text"><i class="bi bi-file-medical-fill"></i></span>
-                                <input readonly value="{{horarioAtencion.paciente.afiliacionSalud}}" type="text"
-                                    class="form-control">
+                                <input [required]="!modificarAfiliacion.checked"
+                                    [readOnly]="!modificarAfiliacion.checked"
+                                    value="{{horarioAtencion.paciente.afiliacionSalud}}" type="text" ngModel
+                                    #afiliacionPaciente="ngModel" class="form-control" id="afiliacion-pago"
+                                    name="afiliacion-pago" [(ngModel)]="afiliacion" maxlength="30">
+                            </div>
+                            <div class="col-lg-12 text-left">
+                                <input class="form-check-input" type="checkbox" name="modificar-afiliacion"
+                                    id="modificar-afiliacion" ngModel #modificarAfiliacion>
+                                <label for="modificar-afiliacion" class="form-check-label">Modificar afiliación</label>
+                            </div>
+                        </div>
+
+                        <!-- Manejo de errores -->
+                        <div class="col-lg-12"
+                            *ngIf="afiliacionPaciente.invalid && (afiliacionPaciente.touched || afiliacionPaciente.dirty)">
+                            <div *ngIf="afiliacionPaciente.errors?.required">
+                                <small class="text-danger">Se debe ingresar la afiliación asociada a este pago.</small>
                             </div>
                         </div>
                     </div>
